Add github actions

--- a/netcorewa8.csproj
+++ b/netcorewa8.csproj
@@ -7,4 +7,8 @@
         <DockerDefaultTargetOS>Windows</DockerDefaultTargetOS>
     </PropertyGroup>
 
+    <ItemGroup>
+      <Content Include=".github\workflows\docker-image.yml" />
+    </ItemGroup>
+
 </Project>
